# game

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_all_in_one.sh  run_all_in_one_windows.bat
backend/: server.py
backend/dashboard/: app.js  index.html  styles.css
clients/java/: pom.xml
clients/java/examples/: ExampleUsage.java
clients/java/src/main/java/com/game/npc/: NpcSimClient.java
clients/javascript/: package.json
clients/javascript/src/: index.js
tests/: test_api.py
