[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-smallville-sim"
version = "0.2.0"
description = "Installable generative NPC simulation server with dashboard, Ollama integration, and Smallville-compatible APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
]

[project.scripts]
npc-sim = "backend.server:main"

[tool.setuptools]
packages = ["backend"]
include-package-data = true

[tool.setuptools.package-data]
backend = ["dashboard/*"]
